fix: DIPA-150 show "..." for too long card-title in sidenav

--- a/frontend/projects/dipa-frontend/src/app/modules/gantt/sidenav/sidenav.component.scss
+++ b/frontend/projects/dipa-frontend/src/app/modules/gantt/sidenav/sidenav.component.scss
@@ -15,3 +15,10 @@ mat-sidenav {
 .mat-card-subtitle {
   margin-bottom: 0;
 }
+
+.mat-card-title {
+  text-overflow: ellipsis;
+  line-height: 1.2;
+  overflow: hidden;
+  width: 220px;
+}
